syntax = "proto3";

package blog.api.v1;

option go_package = "github.com/SeeMusic/kratos/examples/transaction/api/transaction/v1;v1";
option java_multiple_files = true;
option java_package = "transaction.api.v1";

import "google/api/annotations.proto";

service TransactionService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {
        option (google.api.http) = {
            post: "/v1/transaction"
            body: "*"
        };
    }
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserReply {
    string id = 1;
}
